Padding and spacing issues

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,3 +4,4 @@ $view-container-padding-small: 20px 20px 20px 20px;
 $view-container-padding-large: 20px 20px 20px 20px;
 $desktop-max-width: 1000px;
 $navigation-header-gap: 150px;
+$page-padding: 10px;
